[gd_scene load_steps=2 format=3 uid="uid://61k5vopmx3em"]

[ext_resource type="Script" path="res://scenes/environment/triggers/trigger_area/trigger_area.gd" id="1_atey0"]

[node name="TriggerArea" type="Area2D"]
script = ExtResource("1_atey0")
metadata/_edit_group_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
